@startuml RenovationApp ERD

' Styling
skinparam linetype ortho
skinparam backgroundColor white
skinparam roundcorner 10
skinparam shadowing false
skinparam ArrowColor #666666
skinparam classFontSize 14
skinparam packageFontSize 14
skinparam titleFontSize 20

' Title
title RenovationApp - Entity Relationship Diagram

' Entities

entity "Project" as Project {
  * id : int <<PK>>
  --
  createdTimestamp : DateTime
  createdByEmployee : string
  clientId : string
  rfqId : int <<FK>>
  status : ProjectStatus
  renovationType : RenovationType
  isPublic : bool
  quotePriceOverride : decimal(10,2)
  quoteScheduleStartOverride : DateTime
  quoteScheduleEndOverride : DateTime
}

entity "RFQ" as RFQ {
  * id : int <<PK>>
  --
  createdTimestamp : DateTime
  clientId : string
  status : RFQStatus
  assignedEmployeeId : string
  preferredMaterial : string(160)
  description : string(1000)
  renovationType : RenovationType
  budget : decimal(9,2)
  projectAddress : string(160)
  roomSize : RoomSize
}

entity "RFQImage" as RFQImage {
  * id : int <<PK>>
  --
  uploadedTimestamp : DateTime
  imageUri : string
  rfqId : int <<FK>>
}

entity "ProjectService" as ProjectService {
  * id : int <<PK>>
  --
  status : ProjectStatus
  projectId : int <<FK>>
  name : varchar(255)
  description : text
  projectServiceTypeId : int <<FK>>
  quotePrice : decimal(10,2)
  quoteCost : decimal(10,2)
  quoteStartDate : DateTime
  quoteEndDate : DateTime
  actualStartDate : DateTime
  actualEndDate : DateTime
}

entity "ProjectServiceType" as ProjectServiceType {
  * id : int <<PK>>
  --
  name : varchar(100)
  description : text
}

entity "ProjectServiceInvoice" as ProjectServiceInvoice {
  * id : int <<PK>>
  --
  createdTimeStamp : DateTime
  projectServiceId : int <<FK>>
  amount : decimal(10,2)
  paid : DateTime
}

entity "ProjectTask" as ProjectTask {
  * id : int <<PK>>
  --
  createdTimestamp : DateTime
  projectId : int <<FK>>
  userId : string
  title : text
  description : text
  status : text
}

entity "ProjectComment" as ProjectComment {
  * id : int <<PK>>
  --
  comment : text
  createdTimestamp : DateTime
  createdByEmployee : string
  projectId : int <<FK>>
}

entity "ProjectCommunication" as ProjectCommunication {
  * id : int <<PK>>
  --
  createdTimestamp : DateTime
  message : text
  projectId : int <<FK>>
}

entity "ProjectFile" as ProjectFile {
  * id : int <<PK>>
  --
  uploadedTimestamp : DateTime
  fileUri : text
  fileName : text
  type : FileType
  projectId : int <<FK>>
}

entity "ClientInvoice" as ClientInvoice {
  * id : int <<PK>>
  --
  createdTimestamp : DateTime
  description : text
  paymentInstructions : text
  paid : DateTime
  amount : decimal
  projectId : int <<FK>>
}



' Project relationships
Project ||--o{ ProjectComment
Project ||--o{ ProjectFile
Project ||--o{ ProjectCommunication
Project ||--o{ ClientInvoice
Project ||--o{ ProjectService
Project ||--o{ ProjectTask
Project ||--o| RFQ

' RFQ relationships
RFQ ||--o{ RFQImage

' ProjectService relationships
ProjectService ||--o{ ProjectServiceInvoice
ProjectService }o--|| ProjectServiceType

@enduml